<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/share_24px" android:enabled="true" android:id="@+id/menu_share_app" android:title="@string/menu_share_app"/>
    <item android:icon="@drawable/person_24px" android:enabled="true" android:id="@+id/menu_dev_person" android:title="@string/menu_dev_info"/>
    <item android:icon="@drawable/network_node_24px" android:enabled="false" android:id="@+id/menu_app_info" android:title=""/>
    <item android:icon="@drawable/delete_24px" android:enabled="true" android:id="@+id/menu_delete_app" android:title="@string/menu_delete_app"/>
</menu>

<!--<item android:icon="@drawable/person_24px" android:enabled="true" android:id="@+id/menu_remove_ads" android:title="@string/menu_developer"/>-->
<!--<item android:icon="@drawable/ic_info" android:enabled="true" android:id="@+id/menu_info" android:title="@string/about_us"/>-->
<!--<item android:icon="@drawable/ic_delete" android:enabled="true" android:id="@+id/menu_uninstall" android:title="@string/action_uninstall"/>-->
